; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_help.c_setup_man_path.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_help.c_setup_man_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }

@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 4
@.str = private unnamed_addr constant [8 x i8] c"MANPATH\00", align 1
@GIT_MAN_PATH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @setup_man_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setup_man_path() #0 {
  %1 = alloca %struct.strbuf, align 4
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = bitcast %struct.strbuf* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %4, i8* align 4 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 4, i1 false)
  %5 = call i8* @getenv(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  store i8* %5, i8** %2, align 8
  %6 = load i32, i32* @GIT_MAN_PATH, align 4
  %7 = call i8* @system_path(i32 %6)
  store i8* %7, i8** %3, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = call i32 @strbuf_addstr(%struct.strbuf* %1, i8* %8)
  %10 = call i32 @strbuf_addch(%struct.strbuf* %1, i8 signext 58)
  %11 = load i8*, i8** %2, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %13, label %16

13:                                               ; preds = %0
  %14 = load i8*, i8** %2, align 8
  %15 = call i32 @strbuf_addstr(%struct.strbuf* %1, i8* %14)
  br label %16

16:                                               ; preds = %13, %0
  %17 = load i8*, i8** %3, align 8
  %18 = call i32 @free(i8* %17)
  %19 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %1, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @setenv(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 %20, i32 1)
  %22 = call i32 @strbuf_release(%struct.strbuf* %1)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i8* @getenv(i8*) #2

declare dso_local i8* @system_path(i32) #2

declare dso_local i32 @strbuf_addstr(%struct.strbuf*, i8*) #2

declare dso_local i32 @strbuf_addch(%struct.strbuf*, i8 signext) #2

declare dso_local i32 @free(i8*) #2

declare dso_local i32 @setenv(i8*, i32, i32) #2

declare dso_local i32 @strbuf_release(%struct.strbuf*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
